Regression: Optimal display for subdivision does not work when there's other modifier after that #106289

Closed
opened 2023-03-30 04:31:04 +02:00 by Sun Kim · 4 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.3.2.230315

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-28 14:33, hash: 8d16e8f7261b
Worked: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-09 01:29, hash: 3c8f7b1a641e

Caused by 7ca651d182

Short description of error
Optimal display for subdivision modifier does not work when there's other modifier after that.

For example, put Mirror modifier after Subdivision modifier.

Working Broken
OptimalDisplay.png OptimalDisplayBroken.png
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.3.2.230315 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-28 14:33, hash: `8d16e8f7261b` Worked: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-09 01:29, hash: `3c8f7b1a641e` Caused by 7ca651d18274acacfe8e0ecb7bc6fdd3399ea01b **Short description of error** Optimal display for subdivision modifier does not work when there's other modifier after that. For example, put Mirror modifier after Subdivision modifier. | Working | Broken | | -------- | -------- | | ![OptimalDisplay.png](/attachments/100e3b2e-1b8f-4bfa-8efa-27d942a50890) | ![OptimalDisplayBroken.png](/attachments/90638cad-f063-47b3-b4f9-db9149d92399) |
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-30 04:31:05 +02:00
Member

Hi, thanks for the report. I can confirm.

Hi, thanks for the report. I can confirm.
Pratik Borhade changed title from Optimal display for subdivision does not work when there's other modifier after that to Regression: Optimal display for subdivision does not work when there's other modifier after that 2023-03-30 06:41:20 +02:00
Member

Caused by 7ca651d182
@HooglyBoogly ^


@persun, thanks for finding the closest good-bad commits :)

Caused by 7ca651d18274acacfe8e0ecb7bc6fdd3399ea01b @HooglyBoogly ^ - - - @persun, thanks for finding the closest good-bad commits :)
Member

This may not work in all of the cases it worked in before, but I can fix the mirror and array modifiers, at least when there is no merging.

This may not work in all of the cases it worked in before, but I can fix the mirror and array modifiers, at least when there is no merging.
Hans Goudey self-assigned this 2023-03-30 13:50:09 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-03-30 15:07:15 +02:00
Member

The basic problem here is that "optimal display" is stored as a BitVector on meshes, which isn't automatically interpolated to the result mesh. Currently I think that's a good thing though; making the optimal display tag into an actual attribute means it's interpolated too much. So the best way to fix this is probably manually copying the bits into the result mesh's bit vector in a few modifiers/nodes. It would also be a bit weird to call this "optimal display" and then allocate a byte per subdivided mesh edge and interpolate it in later modifiers :/

To do that I'd like to implement MutableBitSpan::copy_from(BitSpan other).

Maybe making this into a generic attribute would be reasonable too. But then it has to be removed manually before some operations like dual mesh that really mess it up.

The basic problem here is that "optimal display" is stored as a `BitVector` on meshes, which isn't automatically interpolated to the result mesh. Currently I think that's a good thing though; making the optimal display tag into an actual attribute means it's interpolated _too_ much. So the best way to fix this is probably manually copying the bits into the result mesh's bit vector in a few modifiers/nodes. It would also be a bit weird to call this "optimal display" and then allocate a byte per subdivided mesh edge and interpolate it in later modifiers :/ To do that I'd like to implement `MutableBitSpan::copy_from(BitSpan other)`. Maybe making this into a generic attribute would be reasonable too. But then it has to be removed manually before some operations like dual mesh that really mess it up.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-28 15:43:44 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106289
No description provided.